Updates to site

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Software Engineer based in New York City.">
   <meta name="author" content="Connor Rowland">
-  <meta property='og:image' content="http://connorrowland.github.io/images/cr-og-img.png"/>
+  <meta property='og:image' content="/images/CR_OpenGraph_Img.png"/>
   <meta name="keywords" content="connor rowland new york, connor, rowland, connor rowland web, connor rowland engineer, web developer, freelance web developer, freelance web developer for hire, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, nyc web engineer, web developer ny, web engineer, Connor John Rowland, baruch college, connor john, machine learning, data science new grad, data, python">
   <!-- Scripts and Links -->
   <script>
@@ -52,13 +52,13 @@
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <p>
-          I’ll be graduating from Baruch College in May of 2018 with a degree in Computer Information Systems, concentrated in Data Analytics, with a minor in Graphic Design. I currently work part-time as a full stack engineer, doing things like:
+          I’ll be graduating from Baruch College in May of 2018 with a degree in Computer Information Systems, concentrated in Data Analytics, and a minor in Graphic Design. I currently work part-time as a software engineer, doing things like:
         </p>
         <ul id="homepage-current-work-list">
           <li>Implementing scalable, organized front-end systems for early-stage start-ups.</li>
           <li>Using modern web technologies like React, Python, Ruby on Rails, Node, and Webpack.</li>
-          <li>Spending a lot of my time creating complex, responsive, and reliable visual layouts quickly in CSS.</li>
-          <li>More recently as I’ve grown into my data analytics concentration, I’ve taken on new work where I seek to extract meaningful conclusions from datasets using Python and R. </li>
+          <li>Creating complex, responsive, and reliable visual layouts quickly in CSS.</li>
+          <li>Taking on new projects in Data Science, working to extract meaningful conclusions from datasets using Python and R.</li>
         </ul>
       </div>
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
@@ -237,7 +237,7 @@
             </li>
             <li>
               <p>
-                Random Forrest
+                Random Forest
               </p>
             </li>
           </ul>
@@ -276,7 +276,7 @@
           <img src="/images/AW_Logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              I got to do a great deal of engineering work for from September 2017 onward through Alden Wolf, which is a digital design agency located in New York. Much of my contract work through Alden Wolf comprised of building interfaces in React, Rails, and SCSS/CSS for clients like Knaq and Rhino (which you can find information about below). I also built Alden Wolf’s website, and you can find that <a href="http://aldenwolf.com/" target="_blank" title="Alden Wolf Website">here</a> if you'd like to take a look.
+              A great deal of my engineering work from September 2017 onward has been done through Alden Wolf, which is a digital design agency located in New York. Much of my Alden Wolf contract work  comprises of building interfaces in React, Rails, and SCSS/CSS for clients like Knaq and Rhino (which you can find information about below). I also built Alden Wolf’s website, which you can find <a href="http://aldenwolf.com/" target="_blank" title="Alden Wolf Website">here</a>.
             </p>
           </div>
         </div>
@@ -284,11 +284,11 @@
           <img src="/images/Ellevest_logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              Ellevest is a digital investing platform geared towards women, with a mission to democratize investing and close the gender investing gap. The first engineering job I ever had took place at Ellevest, starting in the Fall of 2015 as a contractor. My work there started small, doing things like building their Beta release “Sign Up” page, or making HTML emails. But over the next year and a half, my work progressed into more significant, interesting projects like a preliminary Content Management System, a promotional "Galentine's Day Page," Rails API endpoints, all sorts of fun React components and a bunch of CSS layouts. I also spent a large amount of time refining and adding to Ellevest's back-office application, building up strength in Ruby, Rails, and MYSQL.
+              Ellevest is a digital investing platform geared towards women, with a mission to democratize investing and close the gender investing gap. The first engineering job I ever had took place at Ellevest, starting in the Fall of 2015. My work there started small, doing things like building their Beta release “Sign Up” page and making HTML emails. But over the next year and a half, my work progressed into more significant, interesting projects like a preliminary Content Management System, an email preference center, a promotional "Galentine's Day Page," Rails API endpoints, all sorts of fun React components, and a bunch of CSS layouts. I also spent a large amount of time refining and adding to Ellevest's back-office application, building up strength in Ruby, Rails, and MYSQL.
             </p>
             <br>
             <p>
-              My time at Ellevest was awesome. The employees who work there are some of the most intelligent individuals I've had the opportunity to be around. I'll always be thankful for my time there, as I was able to learn so much and prepare myself for the next step in my engineering career.
+              My time at Ellevest was awesome. The employees who work there are some of the most intelligent people I've had the opportunity to be around. I'll always be thankful for my time there, as I was able to learn so much and prepare myself for the next step in my engineering career.
             </p>
           </div>
         </div>
@@ -308,7 +308,7 @@
           <img src="/images/Knaq_Logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              Knaq is a start-up that enables elevator technicians to monitor elevators online through their physical hardware and online product. My work with Knaq involved creating their <a href="https://knaq.io/" title="Knaq Website Link">public-facing landing page</a>, React Components and CSS layouts for their internal product (that will be released to the public soon &#9786;), and data science work that will eventually provide users with more meaningful information about their elevators.
+              Knaq is a new company that enables elevator technicians to monitor elevators online through their physical hardware and online product. My work with Knaq involved creating their <a href="https://knaq.io/" title="Knaq Website Link">public-facing landing page</a>, React Components and CSS layouts for their internal product (that will be released to the public soon &#9786;), and data science work that will eventually provide users with more meaningful information about their elevators.
             </p>
           </div>
         </div>
@@ -316,11 +316,11 @@
           <img src="/images/Emotional_Alexa_logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              <a href="https://connorrowland.github.io/alexa-website/" title="Emotional Alexa Website" target="_blank">Emotional Alexa</a> is an emotionally charged chatbot made into an Amazon Alexa skill for a Creative Inquiry Day at Baruch College. Right now, Alexa only responds to certain questions like "Alexa, ask your emotional self if you think I am pretty!" or "Alexa, ask your emotional self Why I am feeling sad." Eventually, my goal for Emotional Alexa is for her to be completely reliant on machine learning to generate the question responses, after being trained on things like psychological texts and demographic-specific vernacular.
+              <a href="https://connorrowland.github.io/alexa-website/" title="Emotional Alexa Website" target="_blank">Emotional Alexa</a> is an emotionally charged chatbot made into an Amazon Alexa skill for a Creative Inquiry Day at Baruch College. Right now, Alexa only responds to certain questions like "Alexa, ask your emotional self if you think I am pretty!" or "Alexa, ask your emotional self why I am feeling sad." Eventually, my goal for Emotional Alexa is for her to be completely reliant on machine learning to generate the questions and responses, after being trained on things like psychological texts and demographic-specific vernacular.
             </p>
             <br>
             <p>
-              The inspiration for Emotional Alexa was a feeling I had about what emotional support means to me, and what I think it means to other people. I used to feel like my words lacked impact when my friends were going through times of difficulty in their lives and sought advice. But I soon realized that sometimes people just needed to be heard, and not everyone wants advice. So I figured Amazon Echo’s Alexa could help me out, being there to hear people out on issues like self-confidence, stress, or general emotional conflict.
+              The inspiration for Emotional Alexa came from a realization I had about what emotional support means to me, and what I think it means to other people. There were times in the past that I felt helpless in providing my friends with the support they needed through difficult times. But I soon realized that sometimes people just want to talk and be heard; not everyone wants advice. So I figured Amazon Echo’s Alexa could help me out, using her comforting, monotone voice to hear people out on issues like self-confidence, stress, or general emotional conflict.
             </p>
             <br>
             <p>
@@ -332,7 +332,7 @@
           <img src="/images/thread_news_logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              <a href="http://www.thread.news/news/feed/technology" title="Thread News" target="_blank">Thread News</a> is a new application in its beta release that focuses on providing people with a unique news experience. When I met the founders of Thread News, they needed UI and branding design, and someone to integrate those designs into their existing codebase that was built in Ember. So that's what I did! And I'm proud of what the product has become.
+              <a href="http://www.thread.news/news/feed/technology" title="Thread News" target="_blank">Thread News</a> is a new application in its beta release that focuses on providing people with a unique, customized, machine learning driven news experience (that was a lot of words). When I met the founders of Thread News, they had an MVP in place from a back-end perspective. But what they needed in order to bring Thread News to where it needed to be was UI and branding design, and someone to build those interfaces into their existing Ember codebase. So that's what I did! And I'm proud of what the product has become.
             </p>
           </div>
         </div>
@@ -340,7 +340,11 @@
           <img src="/images/instamilligram_logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              InstaMilligram is a photo sharing site intended to replicate the experience of using Instagram. From a developer standpoint, InstaMilligram is a tool I can use to build more projects in the future with, as it is a fully functioning Rails CRUD app with login capability. I recently shut down Instamilligram's photo sharing capabilities as a result of the costs associated with photo storage. This is why you won't see photos if you go to the <a href="http://instamilligram.herokuapp.com/" title="Instamilligram" target="_blank">site</a>.
+              InstaMilligram is a photo sharing site intended to replicate the experience of using Instagram. From a developer standpoint, InstaMilligram is a tool I made with the intention of building more projects on top of it in the future, as it is a fully functioning Rails CRUD application. I built InstaMilligram when I first started out as an engineer to gain more familiarity with Rails and building full-scale projects on my own.
+            </p>
+            <br>
+            <p>
+              I recently shut down Instamilligram's photo sharing capabilities as a result of the costs associated with photo storage, which is why you won't see photos if you go to the <a href="http://instamilligram.herokuapp.com/" title="Instamilligram" target="_blank">site</a>.
             </p>
           </div>
         </div>
