--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,22 @@
   <meta name="author" content="Connor Rowland">
   <meta property='og:image' content="/images/CR_OpenGraph_Img.png"/>
   <meta name="keywords" content="connor rowland new york, connor, rowland, connor rowland web, connor rowland engineer, web developer, freelance web developer, freelance web developer for hire, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, nyc web engineer, web developer ny, web engineer, Connor John Rowland, baruch college, connor john, machine learning, data science new grad, data, python">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <!-- Scripts and Links -->
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,7 +38,7 @@
   <script src="./js/bundle.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Cardo:400" rel="stylesheet">
-  <link rel="shortcut icon" href="/images/favicon.ico"/>
+  <link rel="shortcut icon" href="/favicon.ico"/>
 </head>
 <body>
   <nav id="nav-bar">
