--- a/app/index.html
+++ b/app/index.html
@@ -68,13 +68,13 @@
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <p>
-          I’ll be graduating from Baruch College in May of 2018 with a degree in Computer Information Systems, concentrated in Data Analytics, and a minor in Graphic Design. I currently work part-time as a software engineer, doing things like:
+          I’ll be graduating from Baruch College in May of 2018 with a B.B.A. in Computer Information Systems. While I've been at Baruch, I concentrated my studies in Data Science and Graphic Communication, and paired my schooling with 3 years of work in Software Engineering for companies that I've outlined below. Right now, I currently work part-time as a software engineer doing things like:
         </p>
         <ul id="homepage-current-work-list">
-          <li>Implementing scalable, organized front-end systems for early-stage start-ups.</li>
-          <li>Using modern web technologies like React, Python, Ruby on Rails, Node, and Webpack.</li>
-          <li>Creating complex, responsive, and reliable visual layouts quickly in CSS.</li>
-          <li>Taking on new projects in Data Science, working to extract meaningful conclusions from datasets using Python and R.</li>
+          <li>Building the product interfaces and data pipelines for a new elevator analysis platform using React.JS, Node, Webpack, and SCSS.</li>
+          <li>Working directly with clients to construct new user-facing product features using Ruby on Rails, RSpec, React.JS, Jest.</li>
+          <li>(Quickly) creating responsive visual layouts using modern CSS principles that perform consistently across web browsers.</li>
+          <li>Working on the data science side of the aforementioned elevator company to extract meaningful conclusions from their datasets using Python, R, and Prophet.</li>
         </ul>
       </div>
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
@@ -149,12 +149,17 @@
           <ul class="homepage--skills-list">
             <li>
               <p class="homepage-skills-list--heading">
-                Frameworks & Libraries
+                Tools
               </p>
             </li>
             <li>
               <p>
                 React
+              </p>
+            </li>
+            <li>
+              <p>
+                Jest
               </p>
             </li>
             <li>
@@ -170,6 +175,11 @@
             <li>
               <p>
                 Ruby on Rails
+              </p>
+            </li>
+            <li>
+              <p>
+                RSpec
               </p>
             </li>
             <li>
@@ -216,11 +226,6 @@
             </li>
             <li>
               <p>
-                Typography
-              </p>
-            </li>
-            <li>
-              <p>
                 UI Design
               </p>
             </li>
@@ -248,7 +253,7 @@
             </li>
             <li>
               <p>
-                Regression
+                Regression (Linear/Multiple/Logistic)
               </p>
             </li>
             <li>
@@ -270,7 +275,7 @@
           “How long have you been working as a software engineer?”
         </h2>
         <p class="common-question--answer">
-          Since September of 2015.
+          For about 3 years.
         </p>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-2"></div>
@@ -316,7 +321,7 @@
             </p>
             <br>
             <p>
-              My work can be found throughout their website, on pages like <a href="https://www.sayrhino.com/" title="Rhino Link" target="_blank">Rhino's home page</a>, <a href="https://www.sayrhino.com/how-it-works" title="Rhino Link" target="_blank">How It Works page</a>, <a href="https://www.sayrhino.com/landlords" title="Rhino Link" target="_blank">Landlords page</a>, <a href="https://www.sayrhino.com/brokers" title="Rhino Link" target="_blank">Brokers page</a>, <a href="https://www.sayrhino.com/listings" title="Rhino Link" target="_blank">Listings page</a>, <a href="https://www.sayrhino.com/our_mission" title="Rhino Link" target="_blank">Our Mission page</a>, a few more client-facing pages that you could find inside their product, and their universal desktop/mobile navigation.
+              My work can be found throughout their website, on pages like <a href="https://www.sayrhino.com/" title="Rhino Link" target="_blank">Rhino's home page</a>, <a href="https://www.sayrhino.com/" title="Rhino Link" target="_blank">API Access Page</a>, <a href="https://www.sayrhino.com/api" title="Rhino Link" target="_blank">How It Works page</a>, <a href="https://www.sayrhino.com/landlords" title="Rhino Link" target="_blank">Landlords page</a>, <a href="https://www.sayrhino.com/brokers" title="Rhino Link" target="_blank">Brokers page</a>, <a href="https://www.sayrhino.com/listings" title="Rhino Link" target="_blank">Listings page</a>, <a href="https://www.sayrhino.com/our_mission" title="Rhino Link" target="_blank">Our Mission page</a>, a few more client-facing pages that you could find inside their product, and their universal desktop/mobile navigation.
             </p>
           </div>
         </div>
