--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
         </p>
         <ul id="homepage-current-work-list">
           <li>Building the product interfaces and data pipelines for a new elevator analysis platform using React.JS, Node, Webpack, and SCSS.</li>
-          <li>Working directly with clients to construct new user-facing product features using Ruby on Rails, RSpec, React.JS, Jest.</li>
+          <li>Working directly with clients to construct new user-facing product features using Ruby on Rails, RSpec, React.JS, and Jest.</li>
           <li>(Quickly) creating responsive visual layouts using modern CSS principles that perform consistently across web browsers.</li>
           <li>Working on the data science side of the aforementioned elevator company to extract meaningful conclusions from their datasets using Python, R, and Prophet.</li>
         </ul>
@@ -91,8 +91,8 @@
   </section>
   <section class="homepage--common-question">
     <div class="container">
-      <div class="col-md-1 col-sm-1 col-xs-0"></div>
-      <div class="col-md-10 col-sm-10 col-xs-12">
+      <div class="col-md-1 col-sm-0 col-xs-0"></div>
+      <div class="col-md-10 col-sm-12 col-xs-12">
         <div class="text-center">
           <h2 class="common-question--question-heading">
             “What skills do you have?”
@@ -192,6 +192,16 @@
                 JQuery
               </p>
             </li>
+            <li>
+              <p>
+                Git/Github
+              </p>
+            </li>
+            <li>
+              <p>
+                Webpack
+              </p>
+            </li>
           </ul>
           <ul class="homepage--skills-list">
             <li>
@@ -253,7 +263,7 @@
             </li>
             <li>
               <p>
-                Regression (Linear/Multiple/Logistic)
+                Regression
               </p>
             </li>
             <li>
@@ -264,7 +274,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-1 col-sm-1 col-xs-0"></div>
+      <div class="col-md-1 col-sm-0 col-xs-0"></div>
     </div>
   </section>
   <section class="homepage--common-question" id="homepage-common-question--computer-section">
@@ -321,7 +331,7 @@
             </p>
             <br>
             <p>
-              My work can be found throughout their website, on pages like <a href="https://www.sayrhino.com/" title="Rhino Link" target="_blank">Rhino's home page</a>, <a href="https://www.sayrhino.com/" title="Rhino Link" target="_blank">API Access Page</a>, <a href="https://www.sayrhino.com/api" title="Rhino Link" target="_blank">How It Works page</a>, <a href="https://www.sayrhino.com/landlords" title="Rhino Link" target="_blank">Landlords page</a>, <a href="https://www.sayrhino.com/brokers" title="Rhino Link" target="_blank">Brokers page</a>, <a href="https://www.sayrhino.com/listings" title="Rhino Link" target="_blank">Listings page</a>, <a href="https://www.sayrhino.com/our_mission" title="Rhino Link" target="_blank">Our Mission page</a>, a few more client-facing pages that you could find inside their product, and their universal desktop/mobile navigation.
+              My work can be found throughout their website, on pages like <a href="https://www.sayrhino.com/" title="Rhino Link" target="_blank">Rhino's home page</a>, <a href="https://www.sayrhino.com/api" title="Rhino Link" target="_blank">API Access Page</a>, <a href="https://www.sayrhino.com/how-it-works" title="Rhino Link" target="_blank">How It Works page</a>, <a href="https://www.sayrhino.com/landlords" title="Rhino Link" target="_blank">Landlords page</a>, <a href="https://www.sayrhino.com/brokers" title="Rhino Link" target="_blank">Brokers page</a>, <a href="https://www.sayrhino.com/listings" title="Rhino Link" target="_blank">Listings page</a>, <a href="https://www.sayrhino.com/our_mission" title="Rhino Link" target="_blank">Our Mission page</a>, a few more client-facing pages that you could find inside their product, and their universal desktop/mobile navigation.
             </p>
           </div>
         </div>
