--- a/app/index.html
+++ b/app/index.html
@@ -68,13 +68,19 @@
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <p>
-          I’ll be graduating from Baruch College in May of 2018 with a B.B.A. in Computer Information Systems. While I've been at Baruch, I concentrated my studies in Data Science and Graphic Communication, and paired my schooling with 3 years of work in Software Engineering for companies that I've outlined below. Right now, I currently work part-time as a software engineer doing things like:
+          I love working on well-designed, engaging, and meaningful products for the web alongside kind people who have a passion for sharing knowledge and skills.
+        </p>
+        <p>
+          I studied Computer Information Sciences at Baruch College and minored in Graphic Design. From my Freshman year onward, I worked as a software engineer trying out a bunch of different facets of full-stack work. Right now, I currently work as a software engineer for a creative agency called Alden Wolf doing things like:
         </p>
         <ul id="homepage-current-work-list">
-          <li>Building the product interfaces and data pipelines for a new elevator analysis platform using React.JS, Node, Webpack, and SCSS.</li>
-          <li>Working directly with clients to construct new user-facing product features using Ruby on Rails, RSpec, React.JS, and Jest.</li>
+          <li>Writing friendly, documented code for product interfaces using technologies like React.JS, Node, Webpack, and SCSS.</li>
+
+          <li>Collaborating directly with clients and designers on full-stack projects to create engaging product features using Ruby on Rails, RSpec, React.JS, and Jest.</li>
+
           <li>(Quickly) creating responsive visual layouts using modern CSS principles that perform consistently across web browsers.</li>
-          <li>Working on the data science side of the aforementioned elevator company to extract meaningful conclusions from their datasets using Python, R, and Prophet.</li>
+
+          <li>Working to build and maintain kind, respectful, and meaningful relationships with the people I work with from all disciplines and backgrounds. 🙂</li>
         </ul>
       </div>
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
@@ -95,7 +101,7 @@
       <div class="col-md-10 col-sm-12 col-xs-12">
         <div class="text-center">
           <h2 class="common-question--question-heading">
-            “What skills do you have?”
+            “What technical skills do you have?”
           </h2>
         </div>
         <div class="homepage--skills-container">
@@ -277,15 +283,31 @@
       <div class="col-md-1 col-sm-0 col-xs-0"></div>
     </div>
   </section>
+  <section class="homepage--common-question">
+    <div class="container">
+      <div class="col-md-1 col-sm-0 col-xs-0"></div>
+      <div class="col-md-10 col-sm-12 col-xs-12">
+        <div class="text-center">
+          <h2 class="common-question--question-heading">
+            “Do you know anything about design? Can you navigate through design tools?”
+          </h2>
+          <p class="common-question--answer">
+            Absolutely! As I mentioned before, I minored in Graphic Design in college and also spent time designing digital products during my freelance career. So I'm great with tools like Sketch, Photoshop, Illustrator, InDesign, and InVision.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-1 col-sm-0 col-xs-0"></div>
+    </div>
+  </section>
   <section class="homepage--common-question" id="homepage-common-question--computer-section">
     <div class="container">
       <div class="col-md-3 col-sm-3 col-xs-2"></div>
       <div class="col-md-6 col-sm-6 col-xs-8">
         <h2 class="common-question--question-heading">
-          “How long have you been working as a software engineer?”
+          “How much experience do you have working as a software engineer?”
         </h2>
         <p class="common-question--answer">
-          For about 3 years.
+          Just over 3 years! It's been quite fun so far.
         </p>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-2"></div>
@@ -293,10 +315,10 @@
   </section>
   <section class="homepage--common-question" id="homepage--last-question">
     <h2 class="common-question--question-heading">
-      “What work have you done?”
+      “Can you tell me more about the work you’ve done?”
     </h2>
     <p class="common-question--answer">
-      Quite a bit! Take a look below:
+      Sure! I'd love to. Take a look below:
     </p>
     <img id="homepage--my-work-downward-hand" src="/images/downward_pointed_hand_emoji.png" alt="Downward Pointed Hand Emoji">
   </section>
@@ -315,7 +337,7 @@
           <img src="/images/Ellevest_logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              Ellevest is a digital investing platform geared towards women, with a mission to democratize investing and close the gender investing gap. The first engineering job I ever had took place at Ellevest, starting in the Fall of 2015. My work there started small, doing things like building their Beta release “Sign Up” page and making HTML emails. But over the next year and a half, my work progressed into more significant, interesting projects like a preliminary Content Management System, an email preference center, a promotional "Galentine's Day Page," Rails API endpoints, all sorts of fun React components, and a bunch of CSS layouts. I also spent a large amount of time refining and adding to Ellevest's back-office application, building up strength in Ruby, Rails, and MYSQL.
+              Ellevest is a digital investing platform geared towards women, with a mission to democratize investing and close the gender investing gap. The first engineering job I ever had took place at Ellevest, starting in the Fall of 2015. My work there started small, doing things like building their Beta release “Sign Up” page and making HTML emails. But over the next year and a half, my work progressed into more significant, interesting projects like a preliminary Content Management System, an email preference center, a promotional "Galentine's Day Page," Rails API endpoints, all sorts of fun React components and a bunch of CSS layouts. I also spent a large amount of time refining and adding to Ellevest's back-office application, building up strength in Ruby, Rails, and MYSQL.
             </p>
             <br>
             <p>
