--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
     <div class="container">
       <div id="homepage-intro--parent-container">
         <div id="homepage-intro--emoji-container">
-          <img src="/images/technologist_emoji.png" id="technologist--emoji" alt="Technologist Emoji">
+          <img src="/images/computer.gif" id="technologist--emoji" alt="Technologist Emoji">
         </div>
         <div id="homepage-intro--text-container">
           <h2>Hi there.<br>I’m Connor, a software engineer living and working in New York.</h2>
@@ -68,7 +68,7 @@
       <div class="col-md-2 col-sm-2 col-xs-0"></div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <p>
-          I love working on well-designed, engaging, and meaningful products for the web alongside kind people who have a passion for sharing knowledge and skills.
+          I love working on well-designed, engaging, and meaningful products for the web alongside kind people.
         </p>
         <p>
           I studied Computer Information Sciences at Baruch College and minored in Graphic Design. From my Freshman year onward, I worked as a software engineer trying out a bunch of different facets of full-stack work. Right now, I currently work as a software engineer for a creative agency called Alden Wolf doing things like:
@@ -104,181 +104,116 @@
             “What technical skills do you have?”
           </h2>
         </div>
-        <div class="homepage--skills-container">
-          <ul class="homepage--skills-list">
-            <li>
-              <p class="homepage-skills-list--heading">
-                Languages
-              </p>
-            </li>
-            <li>
-              <p>
-                JavaScript
-              </p>
-            </li>
-            <li>
-              <p>
-                Python
-              </p>
-            </li>
-            <li>
-              <p>
-                C++
-              </p>
-            </li>
-            <li>
-              <p>
-                Ruby
-              </p>
-            </li>
-            <li>
-              <p>
-                SQL
-              </p>
-            </li>
-            <li>
-              <p>
-                R
-              </p>
-            </li>
-            <li>
-              <p>
-                HTML
-              </p>
-            </li>
-            <li>
-              <p>
-                CSS/Scss
-              </p>
-            </li>
-          </ul>
-          <ul class="homepage--skills-list">
-            <li>
-              <p class="homepage-skills-list--heading">
-                Tools
-              </p>
-            </li>
-            <li>
-              <p>
-                React
-              </p>
-            </li>
-            <li>
-              <p>
-                Jest
-              </p>
-            </li>
-            <li>
-              <p>
-                Ember
-              </p>
-            </li>
-            <li>
-              <p>
-                Node
-              </p>
-            </li>
-            <li>
-              <p>
-                Ruby on Rails
-              </p>
-            </li>
-            <li>
-              <p>
-                RSpec
-              </p>
-            </li>
-            <li>
-              <p>
-                Flask
-              </p>
-            </li>
-            <li>
-              <p>
-                JQuery
-              </p>
-            </li>
-            <li>
-              <p>
-                Git/Github
-              </p>
-            </li>
-            <li>
-              <p>
-                Webpack
-              </p>
-            </li>
-          </ul>
-          <ul class="homepage--skills-list">
-            <li>
-              <p class="homepage-skills-list--heading">
-                Design
-              </p>
-            </li>
-            <li>
-              <p>
-                Sketch
-              </p>
-            </li>
-            <li>
-              <p>
-                Illustrator
-              </p>
-            </li>
-            <li>
-              <p>
-                InDesign
-              </p>
-            </li>
-            <li>
-              <p>
-                Photoshop
-              </p>
-            </li>
-            <li>
-              <p>
-                InVision
-              </p>
-            </li>
-            <li>
-              <p>
-                UI Design
-              </p>
-            </li>
-          </ul>
-          <ul class="homepage--skills-list">
-            <li>
-              <p class="homepage-skills-list--heading">
-                Data Science
-              </p>
-            </li>
-            <li>
-              <p>
-                Pandas
-              </p>
-            </li>
-            <li>
-              <p>
-                Matplotlib
-              </p>
-            </li>
-            <li>
-              <p>
-                Text Mining
-              </p>
-            </li>
-            <li>
-              <p>
-                Regression
-              </p>
-            </li>
-            <li>
-              <p>
-                Random Forest
-              </p>
-            </li>
-          </ul>
+        <div class="col-md-3 col-sm-2 col-xs-1"></div>
+        <div class="col-md-6 col-sm-8 col-xs-10">
+          <div class="homepage--skills-container">
+            <ul class="homepage--skills-list">
+              <li>
+                <p class="homepage-skills-list--heading">
+                  Languages
+                </p>
+              </li>
+              <li>
+                <p>
+                  JavaScript
+                </p>
+              </li>
+              <li>
+                <p>
+                  Python
+                </p>
+              </li>
+              <li>
+                <p>
+                  C++
+                </p>
+              </li>
+              <li>
+                <p>
+                  Ruby
+                </p>
+              </li>
+              <li>
+                <p>
+                  SQL
+                </p>
+              </li>
+              <li>
+                <p>
+                  R
+                </p>
+              </li>
+              <li>
+                <p>
+                  HTML
+                </p>
+              </li>
+              <li>
+                <p>
+                  CSS/Scss
+                </p>
+              </li>
+            </ul>
+            <ul class="homepage--skills-list">
+              <li>
+                <p class="homepage-skills-list--heading">
+                  Tools
+                </p>
+              </li>
+              <li>
+                <p>
+                  React
+                </p>
+              </li>
+              <li>
+                <p>
+                  Jest
+                </p>
+              </li>
+              <li>
+                <p>
+                  Ember
+                </p>
+              </li>
+              <li>
+                <p>
+                  Node
+                </p>
+              </li>
+              <li>
+                <p>
+                  Ruby on Rails
+                </p>
+              </li>
+              <li>
+                <p>
+                  RSpec
+                </p>
+              </li>
+              <li>
+                <p>
+                  Flask
+                </p>
+              </li>
+              <li>
+                <p>
+                  JQuery
+                </p>
+              </li>
+              <li>
+                <p>
+                  Git/Github
+                </p>
+              </li>
+              <li>
+                <p>
+                  Webpack
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
+        <div class="col-md-3 col-sm-2 col-xs-1"></div>
       </div>
       <div class="col-md-1 col-sm-0 col-xs-0"></div>
     </div>
@@ -289,10 +224,10 @@
       <div class="col-md-10 col-sm-12 col-xs-12">
         <div class="text-center">
           <h2 class="common-question--question-heading">
-            “Do you know anything about design? Can you navigate through design tools?”
+            “Do you know anything about design?<br> Can you work with any design tools?”
           </h2>
           <p class="common-question--answer">
-            Absolutely! As I mentioned before, I minored in Graphic Design in college and also spent time designing digital products during my freelance career. So I'm great with tools like Sketch, Photoshop, Illustrator, InDesign, and InVision.
+            Yes! I minored in Graphic Design in college and also spent time designing digital products during my freelance career. So I'm great with tools like <b>Sketch</b>, <b>Photoshop</b>, <b>Illustrator</b>, <b>InDesign</b>, and <b>InVision</b>.
           </p>
         </div>
       </div>
@@ -301,16 +236,16 @@
   </section>
   <section class="homepage--common-question" id="homepage-common-question--computer-section">
     <div class="container">
-      <div class="col-md-3 col-sm-3 col-xs-2"></div>
-      <div class="col-md-6 col-sm-6 col-xs-8">
+      <div class="col-md-3 col-sm-3 col-xs-1"></div>
+      <div class="col-md-6 col-sm-6 col-xs-10">
         <h2 class="common-question--question-heading">
-          “How much experience do you have working as a software engineer?”
+          “How many years of experience do you have working as a software engineer?”
         </h2>
         <p class="common-question--answer">
           Just over 3 years! It's been quite fun so far.
         </p>
       </div>
-      <div class="col-md-3 col-sm-3 col-xs-2"></div>
+      <div class="col-md-3 col-sm-3 col-xs-1"></div>
     </div>
   </section>
   <section class="homepage--common-question" id="homepage--last-question">
@@ -318,7 +253,7 @@
       “Can you tell me more about the work you’ve done?”
     </h2>
     <p class="common-question--answer">
-      Sure! I'd love to. Take a look below:
+      I'd love to. Take a look below:
     </p>
     <img id="homepage--my-work-downward-hand" src="/images/downward_pointed_hand_emoji.png" alt="Downward Pointed Hand Emoji">
   </section>
@@ -385,7 +320,7 @@
           <img src="/images/thread_news_logo.png" alt="Portfolio Item Logo" class="homepage-portfolio-item--logo">
           <div class="homepage-portfolio-item--text">
             <p>
-              <a href="http://www.thread.news/news/feed/technology" title="Thread News" target="_blank">Thread News</a> is a new application in its beta release that focuses on providing people with a unique, customized, machine learning driven news experience (that was a lot of words). When I met the founders of Thread News, they had an MVP in place from a back-end perspective. But what they needed in order to bring Thread News to where it needed to be was UI and branding design, and someone to build those interfaces into their existing Ember codebase. So that's what I did! And I'm proud of what the product has become.
+              <a href="http://www.thread.news/news/feed/technology" title="Thread News" target="_blank">Thread News</a> is a new application in its beta release that focuses on providing people with a unique, customized, machine learning driven news experience (that was a lot of words). When I met the founders of Thread News, they wanted an MVP and only had their back-end working. So what they needed in order to bring Thread News to where it needed to be was UI and branding design, and someone to build those interfaces into their existing Ember codebase. So that's what I did! And I'm proud of what the product has become.
             </p>
           </div>
         </div>
@@ -397,7 +332,7 @@
             </p>
             <br>
             <p>
-              I recently shut down Instamilligram's photo sharing capabilities as a result of the costs associated with photo storage, which is why you won't see photos if you go to the <a href="http://instamilligram.herokuapp.com/" title="Instamilligram" target="_blank">site</a>.
+              I recently shut down InstaMilligram's photo sharing capabilities as a result of AWS costs, which is why you won't see photos if you go to the <a href="http://instamilligram.herokuapp.com/" title="Instamilligram" target="_blank">site</a>.
             </p>
           </div>
         </div>
@@ -415,7 +350,7 @@
             </p>
             <br>
             <p>
-              Note: The current front end for CareerPeer has since been changed significantly, and is not my work. If you'd like to see screenshots of my work for them, you can do that <a href="/images/CR_CareerPeer_Work.pdf" title="Career Peer PDF" target="_blank">here</a>.
+              Note: The current front end and designs for CareerPeer have changed significantly since my freelance work there ended. But if you would like to see samples of my work for them just let me know! I would be happy to share them with you. :-)
             </p>
           </div>
         </div>
